--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,95 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+/* иконка сердца: ее состояния и анимация */
+.like-icon:hover .core {
+  fill: var(--color-heart-contur);
+  transition-duration: 0.3s;
+  transition-delay: 0s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--color-heart-contur);
+  transition-duration: 0.3s;
+  transition-delay: 0.03s;
+}
+
+.like-icon:not(:hover) .core {
+  fill: transparent;
+  transition-duration: 0.3s;
+  transition-delay: 0.03s;
+}
+
+.like-icon:not(:hover) .main-body {
+  fill: transparent;
+  transition-duration: 0.3s;
+  transition-delay: 0s;
+}
+
+.like-icon:active .core {
+  fill: var(--animation-fill-color);
+  transition-duration: 0.3s;
+  transition-delay: 0s;
+}
+
+.like-icon:active .main-body {
+  fill: var(--animation-fill-color);
+  transition-duration: 0.3s;
+  transition-delay: 0.03s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--animation-fill-color);
+  transition-delay: 0s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color);
+  transition-delay: 0.03s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color);
+  transition-delay: 0.06s;
+  transition-duration: 0.3s;
+}
+
+.like-icon:not(.is-liked) .contour {
+  transition-delay: 0s;
+  transition-duration: 0.1s;
+  transition-timing-function: linear;
+}
+
+.like-icon.is-liked .heart {
+  animation: rice-heart 0.3s ease-in 0.1s forwards;
+  transform-origin: center;
+}
+
+@keyframes rice-heart {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.25);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+.like-icon.is-liked .sparks {
+  opacity: 1;
+  animation: appearance-sparks 0.3s ease-in 0.3s forwards;
+}
+
+@keyframes appearance-sparks {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
