--- a/styles/animations.css
+++ b/styles/animations.css
@@ -19,7 +19,7 @@
 .like-icon:hover .main-body {
     fill: var(--color-heart-contur);
     transition-duration: 0.3s;
-    transition-delay: 0.03s;
+    transition-delay: 0.05s; 
 }
 
 .like-icon:not(:hover) .core {
@@ -43,7 +43,7 @@
 .like-icon:active .main-body {
     fill: var(--animation-fill-color);
     transition-duration: 0.3s;
-    transition-delay: 0.03s;
+    transition-delay: 0.05s; 
 }
 
 .like-icon.is-liked .core {
@@ -53,7 +53,7 @@
 
 .like-icon.is-liked .main-body {
     fill: var(--animation-fill-color);
-    transition-delay: 0.03s;
+    transition-delay: 0.05s; 
 }
 
 .like-icon.is-liked .contour {
@@ -69,7 +69,7 @@
 }
 
 .like-icon.is-liked .heart {
-    animation: rice-heart 0.3s ease-in 0.1s forwards;
+    animation: rice-heart 0.3s ease-in 0.1s; 
     transform-origin: center;
 }
 
@@ -88,16 +88,18 @@
 }
 
 .like-icon.is-liked .sparks {
-    opacity: 1;
+    opacity: 0;      
     animation: appearance-sparks 0.3s ease-in 0.3s forwards;
 }
 
 @keyframes appearance-sparks {
-    0% {
-        opacity: 1;
+    0% { 
+        opacity: 0;
     }
 
     100% {
-        opacity: 0;
+        opacity: 1;
     }
 }
+
+/* ИСПРАВИЛА ЗАМЕЧАНИЯ */
