--- a/styles/animations.css
+++ b/styles/animations.css
@@ -10,6 +10,7 @@
 
 */
 /* иконка сердца: ее состояния и анимация */
+
 .like-icon:hover .core {
     fill: var(--color-heart-contur);
     transition-duration: 0.3s;
@@ -19,7 +20,7 @@
 .like-icon:hover .main-body {
     fill: var(--color-heart-contur);
     transition-duration: 0.3s;
-    transition-delay: 0.05s; 
+    transition-delay: 0.05s;
 }
 
 .like-icon:not(:hover) .core {
@@ -43,7 +44,7 @@
 .like-icon:active .main-body {
     fill: var(--animation-fill-color);
     transition-duration: 0.3s;
-    transition-delay: 0.05s; 
+    transition-delay: 0.05s;
 }
 
 .like-icon.is-liked .core {
@@ -53,7 +54,7 @@
 
 .like-icon.is-liked .main-body {
     fill: var(--animation-fill-color);
-    transition-delay: 0.05s; 
+    transition-delay: 0.05s;
 }
 
 .like-icon.is-liked .contour {
@@ -69,7 +70,7 @@
 }
 
 .like-icon.is-liked .heart {
-    animation: rice-heart 0.3s ease-in 0.1s; 
+    animation: rice-heart 0.3s ease-in 0.1s;
     transform-origin: center;
 }
 
@@ -88,12 +89,12 @@
 }
 
 .like-icon.is-liked .sparks {
-    opacity: 0;      
-    animation: appearance-sparks 0.3s ease-in 0.3s forwards;
+    opacity: 0;
+    animation: appearance-sparks 0.3s ease-in 0.3s;
 }
 
 @keyframes appearance-sparks {
-    0% { 
+    0% {
         opacity: 0;
     }
 
@@ -101,5 +102,3 @@
         opacity: 1;
     }
 }
-
-/* ИСПРАВИЛА ЗАМЕЧАНИЯ */
